grove uses web-application.yml and goes in container-apps

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -114,6 +114,13 @@ Parameters:
     Type: String
   AuguryEcrImageTag:
     Type: String
+  # Grove Specific ###############################################################
+  GrovePlatformALBListenerPriorityPrefix:
+    Type: String
+  GroveEcrImageTag:
+    Type: String
+  GroveSecretsVersion:
+    Type: String
 Resources:
   ExchangeStack:
     Type: "AWS::CloudFormation::Stack"
