ok maybe if I just remove the stack and not the params it wont break everything

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -114,6 +114,13 @@ Parameters:
     Type: String
   AuguryEcrImageTag:
     Type: String
+  # Grove Specific ###############################################################
+  GrovePlatformALBListenerPriorityPrefix:
+    Type: String
+  GroveEcrImageTag:
+    Type: String
+  GroveSecretsVersion:
+    Type: String
 Resources:
   ExchangeStack:
     Type: "AWS::CloudFormation::Stack"
@@ -566,3 +573,47 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "scheduled-task.yml"]]
       TimeoutInMinutes: 5
+#  GroveStack:
+#    Type: "AWS::CloudFormation::Stack"
+#    Condition: IsStaging
+#    Properties:
+#      NotificationARNs:
+#        - Fn::ImportValue:
+#            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+#      Parameters:
+#        VPC: !Ref VPC
+#        PlatformALBDNSName: !Ref PlatformALBDNSName
+#        PlatformALBFullName: !Ref PlatformALBFullName
+#        PlatformALBCanonicalHostedZoneID: !Ref PlatformALBCanonicalHostedZoneID
+#        PlatformALBHTTPListenerArn: !Ref PlatformALBHTTPListenerArn
+#        PlatformALBHTTPSListenerArn: !Ref PlatformALBHTTPSListenerArn
+#        ECSCluster: !Ref ECSCluster
+#        ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
+#        ECSServiceIAMRole: !Ref ECSServiceIAMRole
+#        OpsDebugMessagesSnsTopicArn:
+#          Fn::ImportValue:
+#            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+#        OpsErrorMessagesSnsTopicArn:
+#          Fn::ImportValue:
+#            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+#        EnvironmentType: !Ref EnvironmentType
+#        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+#        EcrRegion: !Ref EcrRegion
+#        SecretsBase: !Ref SecretsBase
+#        ContainerMemory: !Ref ContainerMemory
+#        ContainerMemoryReservation: !Ref ContainerMemoryReservation
+#        ContainerCpu: !Ref ContainerCpu
+#        PlatformALBListenerPriorityPrefix: !Ref GrovePlatformALBListenerPriorityPrefix
+#        EcrImageTag: !Ref GroveEcrImageTag
+#        SecretsVersion: !Ref GroveSecretsVersion
+#        AppName: "grove"
+#        CreateWorker: "false"
+#        ContainerPort: "4204"
+#        HealthCheckPath: "/api/v1"
+#      Tags:
+#        - Key: "prx:cloudformation:stack-name"
+#          Value: !Ref AWS::StackName
+#        - Key: "prx:cloudformation:stack-id"
+#          Value: !Ref AWS::StackId
+#      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
+#      TimeoutInMinutes: 5
