--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -98,6 +98,10 @@ Parameters:
     Type: String
   FourohfourEcrImageTag:
     Type: String
+  GroveEcrImageTag:
+    Type: String
+  GroveSecretsVersion:
+    Type: String
   RadiotopiaTowerLambdaCodeS3ObjectVersion:
     Type: String
   PixelPrxOrgCodeS3ObjectVersion:
@@ -188,6 +192,8 @@ Mappings:
       prefix: 36
     Jingle:
       prefix: 38
+    Grove:
+      prefix: 40
     Crier:
       prefix: 42
     StripeProxy:
@@ -355,6 +361,10 @@ Resources:
         NetworksPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
         NetworksEcrImageTag: !Ref NetworksEcrImageTag
         NetworksSecretsVersion: !Ref NetworksSecretsVersion
+        # Grove
+        GrovePlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
+        GroveEcrImageTag: !Ref GroveEcrImageTag
+        GroveSecretsVersion: !Ref GroveSecretsVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
