nevermind, do use 'generic' web-application.yml

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -615,5 +615,5 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "grove.prx.org.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application"]]
       TimeoutInMinutes: 5
