--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -362,7 +362,7 @@ Resources:
         NetworksEcrImageTag: !Ref NetworksEcrImageTag
         NetworksSecretsVersion: !Ref NetworksSecretsVersion
         # Grove
-        GrovePlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
+        GrovePlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Grove, prefix]
         GroveEcrImageTag: !Ref GroveEcrImageTag
         GroveSecretsVersion: !Ref GroveSecretsVersion
       Tags:
