Pass legacy analytics function names to serverless stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -257,6 +257,10 @@ Resources:
         AnalyticsIngestLambdaCodeS3ObjectVersion: !Ref AnalyticsIngestLambdaCodeS3ObjectVersion
         RadiotopiaTowerLambdaCodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
         PixelPrxOrgCodeS3ObjectVersion: !Ref PixelPrxOrgCodeS3ObjectVersion
+        # TEMP: legacy analytics-ingest-lambda function names for log filters
+        AnalyticsBigqueryFunctionName: !GetAtt AnalyticsIngestLambdaStack.BigqueryFunctionName
+        AnalyticsPingbacksFunctionName: !GetAtt AnalyticsIngestLambdaStack.PingbacksFunctionName
+        AnalyticsRedisFunctionName: !GetAtt AnalyticsIngestLambdaStack.RedisFunctionName
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
