Pass function names to filters stack

--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -103,5 +103,7 @@ Resources:
       FunctionName: !Ref AnalyticsDynamodbLambdaFunction
       StartingPosition: "LATEST"
 Outputs:
+  DynamodbFunctionName:
+    Value: !Ref AnalyticsDynamodbLambdaFunction
   DynamodbFunctionArn:
     Value: !GetAtt AnalyticsDynamodbLambdaFunction.Arn
