Fix pingfail pattern

--- a/stacks/serverless/analytics-ingest-filters.yml
+++ b/stacks/serverless/analytics-ingest-filters.yml
@@ -141,7 +141,7 @@ Resources:
   AnalyticsPingbacksFailMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
-      FilterPattern: '{ $.msg != "PINGFAIL" }'
+      FilterPattern: '{ $.msg = "PINGFAIL*" }'
       LogGroupName: !Sub "/aws/lambda/${PingbacksFunctionName}"
       MetricTransformations:
         - MetricName: !Sub "analytics_pingbacks_fails_${EnvironmentTypeAbbreviation}"
