Add missing lambdas

--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -17,6 +17,16 @@ Parameters:
     Type: String
   EnvironmentType:
     Type: String
+  EnvironmentTypeAbbreviation:
+    Type: String
+  VPCSecurityGroup:
+    Type: "AWS::EC2::SecurityGroup::Id"
+  VPCSubnet1:
+    Type: "AWS::EC2::Subnet::Id"
+  VPCSubnet2:
+    Type: "AWS::EC2::Subnet::Id"
+  VPCSubnet3:
+    Type: "AWS::EC2::Subnet::Id"
   MetricsKinesisStream:
     Type: AWS::SSM::Parameter::Value<String>
   DynamodbKinesisStream:
@@ -26,6 +36,8 @@ Parameters:
   DynamodbAccessRole:
     Type: AWS::SSM::Parameter::Value<String>
   DynamodbTTL:
+    Type: AWS::SSM::Parameter::Value<String>
+  RedisHost:
     Type: AWS::SSM::Parameter::Value<String>
 Resources:
   # Shared IAM Role
@@ -76,6 +88,33 @@ Resources:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaKinesisExecutionRole"
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
   # Lambda Functions
+  AnalyticsBigqueryLambdaFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket: !Ref CodeS3Bucket
+        S3Key: lambda/PRX-analytics-ingest-lambda.zip
+        S3ObjectVersion: !Ref CodeS3ObjectVersion
+      Description: Dovetail analytics to bigquery
+      Environment:
+        Variables:
+          # TODO: get these out of the code and into CFN somehow
+          PARAMSTORE_PREFIX: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-bigquery"
+          BQ_PROJECT_ID: "prx-metrics"
+      Handler: index.handler
+      MemorySize: 384
+      Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
+      Runtime: nodejs8.10
+      Tags:
+        - Key: Project
+          Value: Dovetail
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      Timeout: 30
   AnalyticsDynamodbLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -105,7 +144,73 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       Timeout: 30
+  AnalyticsPingbacksLambdaFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket: !Ref CodeS3Bucket
+        S3Key: lambda/PRX-analytics-ingest-lambda.zip
+        S3ObjectVersion: !Ref CodeS3ObjectVersion
+      Description: Dovetail analytics http pingbacks
+      Environment:
+        Variables:
+          PINGBACKS: "true"
+      Handler: index.handler
+      MemorySize: 1024
+      Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
+      Runtime: nodejs8.10
+      Tags:
+        - Key: Project
+          Value: Dovetail
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      Timeout: 30
+  AnalyticsRedisLambdaFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket: !Ref CodeS3Bucket
+        S3Key: lambda/PRX-analytics-ingest-lambda.zip
+        S3ObjectVersion: !Ref CodeS3ObjectVersion
+      Description: Dovetail analytics redis increments
+      Environment:
+        Variables:
+          REDIS_HOST: !Ref RedisHost
+          REDIS_TTL: "7200"
+      Handler: index.handler
+      MemorySize: 256
+      Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
+      Runtime: nodejs8.10
+      Tags:
+        - Key: Project
+          Value: Dovetail
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      Timeout: 30
+      VpcConfig:
+        SecurityGroupIds:
+          - !Ref VPCSecurityGroup
+        SubnetIds:
+          - !Ref VPCSubnet1
+          - !Ref VPCSubnet2
+          - !Ref VPCSubnet3
   # Lambda Triggers
+  AnalyticsBigqueryKinesisTrigger:
+    Type: "AWS::Lambda::EventSourceMapping"
+    Properties:
+      BatchSize: 400
+      Enabled: true
+      EventSourceArn: !Ref MetricsKinesisStream
+      FunctionName: !Ref AnalyticsBigqueryLambdaFunction
+      StartingPosition: "LATEST"
   AnalyticsDynamodbKinesisTrigger:
     Type: "AWS::Lambda::EventSourceMapping"
     Properties:
@@ -114,8 +219,36 @@ Resources:
       EventSourceArn: !Ref DynamodbKinesisStream
       FunctionName: !Ref AnalyticsDynamodbLambdaFunction
       StartingPosition: "LATEST"
+  AnalyticsPingbacksKinesisTrigger:
+    Type: "AWS::Lambda::EventSourceMapping"
+    Properties:
+      BatchSize: 50
+      Enabled: true
+      EventSourceArn: !Ref MetricsKinesisStream
+      FunctionName: !Ref AnalyticsPingbacksLambdaFunction
+      StartingPosition: "LATEST"
+  AnalyticsRedisKinesisTrigger:
+    Type: "AWS::Lambda::EventSourceMapping"
+    Properties:
+      BatchSize: 400
+      Enabled: true
+      EventSourceArn: !Ref MetricsKinesisStream
+      FunctionName: !Ref AnalyticsRedisLambdaFunction
+      StartingPosition: "LATEST"
 Outputs:
+  BigqueryFunctionName:
+    Value: !Ref AnalyticsBigqueryLambdaFunction
+  BigqueryFunctionArn:
+    Value: !GetAtt AnalyticsBigqueryLambdaFunction.Arn
   DynamodbFunctionName:
     Value: !Ref AnalyticsDynamodbLambdaFunction
   DynamodbFunctionArn:
     Value: !GetAtt AnalyticsDynamodbLambdaFunction.Arn
+  PingbacksFunctionName:
+    Value: !Ref AnalyticsPingbacksLambdaFunction
+  PingbacksFunctionArn:
+    Value: !GetAtt AnalyticsPingbacksLambdaFunction.Arn
+  RedisFunctionName:
+    Value: !Ref AnalyticsRedisLambdaFunction
+  RedisFunctionArn:
+    Value: !GetAtt AnalyticsRedisLambdaFunction.Arn
