--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -43,13 +43,6 @@ Parameters:
     Type: String
   PixelPrxOrgCodeS3ObjectVersion:
     Type: String
-  # TEMP: legacy analytics-ingest-lambda function names for log filters
-  AnalyticsBigqueryFunctionName:
-    Type: String
-  AnalyticsPingbacksFunctionName:
-    Type: String
-  AnalyticsRedisFunctionName:
-    Type: String
 Resources:
   UploadLambdaStack:
     Type: "AWS::CloudFormation::Stack"
@@ -234,11 +227,16 @@ Resources:
         CodeS3ObjectVersion: !Ref AnalyticsIngestLambdaCodeS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        VPCSecurityGroup: !Ref VPCSecurityGroup
+        VPCSubnet1: !Ref VPCSubnet1
+        VPCSubnet2: !Ref VPCSubnet2
+        VPCSubnet3: !Ref VPCSubnet3
         MetricsKinesisStream: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/METRICS_KINESIS_STREAM"
         DynamodbKinesisStream: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_KINESIS_STREAM"
         DynamodbTableName: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_TABLE_NAME"
         DynamodbAccessRole: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_ACCESS_ROLE"
         DynamodbTTL: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_TTL"
+        RedisHost: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/REDIS_HOST"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
@@ -263,10 +261,11 @@ Resources:
           Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
-        BigqueryFunctionName: !Ref AnalyticsBigqueryFunctionName
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        BigqueryFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.BigqueryFunctionName
         DynamodbFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.DynamodbFunctionName
-        PingbacksFunctionName: !Ref AnalyticsPingbacksFunctionName
-        RedisFunctionName: !Ref AnalyticsRedisFunctionName
+        PingbacksFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.PingbacksFunctionName
+        RedisFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.RedisFunctionName
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
@@ -291,7 +290,10 @@ Resources:
           Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
+        BigqueryFunctionArn: !GetAtt AnalyticsIngestLambdasStack.Outputs.BigqueryFunctionArn
         DynamodbFunctionArn: !GetAtt AnalyticsIngestLambdasStack.Outputs.DynamodbFunctionArn
+        PingbacksFunctionArn: !GetAtt AnalyticsIngestLambdasStack.Outputs.PingbacksFunctionArn
+        RedisFunctionArn: !GetAtt AnalyticsIngestLambdasStack.Outputs.RedisFunctionArn
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
