Ensure log groups exist

--- a/stacks/serverless/analytics-ingest-filters.yml
+++ b/stacks/serverless/analytics-ingest-filters.yml
@@ -24,11 +24,16 @@ Parameters:
     Type: String
 Resources:
   # bigquery metrics
+  AnalyticsBigqueryLogGroup:
+    Type: "AWS::Logs::LogGroup"
+    Properties:
+      LogGroupName: !Sub "/aws/lambda/${BigqueryFunctionName}"
+      RetentionInDays: 14
   AnalyticsBigqueryDownloadsMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $.dest = "dt_downloads" }'
-      LogGroupName: !Sub "/aws/lambda/${BigqueryFunctionName}"
+      LogGroupName: !Ref AnalyticsBigqueryLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_bigquery_downloads_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -37,7 +42,7 @@ Resources:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $.dest = "dt_impressions" }'
-      LogGroupName: !Sub "/aws/lambda/${BigqueryFunctionName}"
+      LogGroupName: !Ref AnalyticsBigqueryLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_bigquery_impressions_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -46,7 +51,7 @@ Resources:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $._logLevel = "error" }'
-      LogGroupName: !Sub "/aws/lambda/${BigqueryFunctionName}"
+      LogGroupName: !Ref AnalyticsBigqueryLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_bigquery_errors_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -72,11 +77,16 @@ Resources:
       Threshold: 0
       TreatMissingData: notBreaching
   # dynamodb metrics
+  AnalyticsDynamodbLogGroup:
+    Type: "AWS::Logs::LogGroup"
+    Properties:
+      LogGroupName: !Sub "/aws/lambda/${DynamodbFunctionName}"
+      RetentionInDays: 14
   AnalyticsDynamodbInsertsMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $.dest = "dynamodb" }'
-      LogGroupName: !Sub "/aws/lambda/${DynamodbFunctionName}"
+      LogGroupName: !Ref AnalyticsDynamodbLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_dynamodb_inserts_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -85,7 +95,7 @@ Resources:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $.dest = "kinesis*" }'
-      LogGroupName: !Sub "/aws/lambda/${DynamodbFunctionName}"
+      LogGroupName: !Ref AnalyticsDynamodbLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_dynamodb_lookups_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -94,7 +104,7 @@ Resources:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $._logLevel = "error" }'
-      LogGroupName: !Sub "/aws/lambda/${DynamodbFunctionName}"
+      LogGroupName: !Ref AnalyticsDynamodbLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_dynamodb_errors_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -120,11 +130,16 @@ Resources:
       Threshold: 0
       TreatMissingData: notBreaching
   # pingbacks metrics
+  AnalyticsPingbacksLogGroup:
+    Type: "AWS::Logs::LogGroup"
+    Properties:
+      LogGroupName: !Sub "/aws/lambda/${PingbacksFunctionName}"
+      RetentionInDays: 14
   AnalyticsPingbacksAdzerkMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $.dest = "engine.adzerk.net" }'
-      LogGroupName: !Sub "/aws/lambda/${PingbacksFunctionName}"
+      LogGroupName: !Ref AnalyticsPingbacksLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_pingbacks_adzerk_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -133,7 +148,7 @@ Resources:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $.dest != "engine.adzerk.net" }'
-      LogGroupName: !Sub "/aws/lambda/${PingbacksFunctionName}"
+      LogGroupName: !Ref AnalyticsPingbacksLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_pingbacks_other_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -142,7 +157,7 @@ Resources:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $.msg = "PINGFAIL*" }'
-      LogGroupName: !Sub "/aws/lambda/${PingbacksFunctionName}"
+      LogGroupName: !Ref AnalyticsPingbacksLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_pingbacks_fails_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -151,7 +166,7 @@ Resources:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $._logLevel = "error" }'
-      LogGroupName: !Sub "/aws/lambda/${PingbacksFunctionName}"
+      LogGroupName: !Ref AnalyticsPingbacksLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_pingbacks_errors_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -177,11 +192,16 @@ Resources:
       Threshold: 0
       TreatMissingData: notBreaching
   # redis metrics
+  AnalyticsRedisLogGroup:
+    Type: "AWS::Logs::LogGroup"
+    Properties:
+      LogGroupName: !Sub "/aws/lambda/${RedisFunctionName}"
+      RetentionInDays: 14
   AnalyticsRedisInsertsMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $.dest = "redis*" }'
-      LogGroupName: !Sub "/aws/lambda/${RedisFunctionName}"
+      LogGroupName: !Ref AnalyticsRedisLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_redis_inserts_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
@@ -190,7 +210,7 @@ Resources:
     Type: "AWS::Logs::MetricFilter"
     Properties:
       FilterPattern: '{ $._logLevel = "error" }'
-      LogGroupName: !Sub "/aws/lambda/${RedisFunctionName}"
+      LogGroupName: !Ref AnalyticsRedisLogGroup
       MetricTransformations:
         - MetricName: !Sub "analytics_redis_errors_${EnvironmentTypeAbbreviation}"
           MetricNamespace: LogMetrics
