Fatal alarms for bigquery/pingbacks metrics

--- a/stacks/serverless/analytics-ingest-filters.yml
+++ b/stacks/serverless/analytics-ingest-filters.yml
@@ -76,6 +76,42 @@ Resources:
       Statistic: Sum
       Threshold: 0
       TreatMissingData: notBreaching
+  AnalyticsBigqueryDownloadsAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Condition: IsProduction
+    Properties:
+      ActionsEnabled: true
+      AlarmName: !Sub "[Analytics][BigQuery][Downloads] ${EnvironmentType} Too Few"
+      AlarmActions: [!Ref OpsFatalMessagesSnsTopicArn]
+      InsufficientDataActions: [!Ref OpsFatalMessagesSnsTopicArn]
+      OKActions: [!Ref OpsFatalMessagesSnsTopicArn]
+      AlarmDescription: BigQuery downloads dropped below threshold
+      ComparisonOperator: LessThanThreshold
+      EvaluationPeriods: 1
+      MetricName: !Sub "analytics_bigquery_downloads_${EnvironmentTypeAbbreviation}"
+      Namespace: LogMetrics
+      Period: 300
+      Statistic: Sum
+      Threshold: 2000
+      TreatMissingData: breaching
+  AnalyticsBigqueryImpressionsAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Condition: IsProduction
+    Properties:
+      ActionsEnabled: true
+      AlarmName: !Sub "[Analytics][BigQuery][Impressions] ${EnvironmentType} Too Few"
+      AlarmActions: [!Ref OpsFatalMessagesSnsTopicArn]
+      InsufficientDataActions: [!Ref OpsFatalMessagesSnsTopicArn]
+      OKActions: [!Ref OpsFatalMessagesSnsTopicArn]
+      AlarmDescription: BigQuery impressions dropped below threshold
+      ComparisonOperator: LessThanThreshold
+      EvaluationPeriods: 1
+      MetricName: !Sub "analytics_bigquery_impressions_${EnvironmentTypeAbbreviation}"
+      Namespace: LogMetrics
+      Period: 300
+      Statistic: Sum
+      Threshold: 4000
+      TreatMissingData: breaching
   # dynamodb metrics
   AnalyticsDynamodbLogGroup:
     Type: "AWS::Logs::LogGroup"
@@ -191,6 +227,24 @@ Resources:
       Statistic: Sum
       Threshold: 0
       TreatMissingData: notBreaching
+  AnalyticsPingbacksAdzerkAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Condition: IsProduction
+    Properties:
+      ActionsEnabled: true
+      AlarmName: !Sub "[Analytics][Pingbacks][Adzerk] ${EnvironmentType} Too Few"
+      AlarmActions: [!Ref OpsFatalMessagesSnsTopicArn]
+      InsufficientDataActions: [!Ref OpsFatalMessagesSnsTopicArn]
+      OKActions: [!Ref OpsFatalMessagesSnsTopicArn]
+      AlarmDescription: Adzerk pingback impressions dropped below threshold
+      ComparisonOperator: LessThanThreshold
+      EvaluationPeriods: 1
+      MetricName: !Sub "analytics_pingbacks_adzerk_${EnvironmentTypeAbbreviation}"
+      Namespace: LogMetrics
+      Period: 300
+      Statistic: Sum
+      Threshold: 4000
+      TreatMissingData: breaching
   # redis metrics
   AnalyticsRedisLogGroup:
     Type: "AWS::Logs::LogGroup"
