Add a helpful default for CloudFront logging bucket

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -137,6 +137,7 @@ Parameters:
       mark (/) and cannot end with a slash mark.
   CloudFrontLoggingBucket:
     Type: String
+    Default: xyz.s3.amazonaws.com
     Description: >
       The Amazon S3 bucket address where access logs are stored for CloudFront.
       (e.g., mybucket.s3.amazonaws.com)
