--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -615,6 +615,13 @@ Resources:
         Id: OrganizationAcccessPolicy
         Version: '2012-10-17'
         Statement:
+          - Sid: AnonymousPublish
+            Effect: Allow
+            Principal:
+              AWS: "*"
+            Action:
+              - SNS:Publish
+            Resource: !Ref OpsWarnMessagesSnsTopic
           - Sid: AccountPublish
             Effect: Allow
             Principal:
