Update feed alias for Passenger List

--- a/dns/passengerlist.org-hosted_zone.yml
+++ b/dns/passengerlist.org-hosted_zone.yml
@@ -30,7 +30,7 @@ Resources:
         - Type: A
           Name: !Sub feed.${Domain}
           AliasTarget:
-            DNSName: d34uzgfh42oway.cloudfront.net
+            DNSName: d37xabah88u7hv.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
   Aws:
