Back to node8 (it's faster)

--- a/stacks/serverless/dovetail-bytes-lambda.yml
+++ b/stacks/serverless/dovetail-bytes-lambda.yml
@@ -48,7 +48,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt DovetailBytesLambdaExecutionIAMRole.Arn
-      Runtime: nodejs10.x
+      Runtime: nodejs8.10
       Timeout: 3
       Tags:
         - Key: Project
