--- a/dns/passengerlist.org-hosted_zone.yml
+++ b/dns/passengerlist.org-hosted_zone.yml
@@ -33,6 +33,12 @@ Resources:
             DNSName: d37xabah88u7hv.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub feed.${Domain}
+          AliasTarget:
+            DNSName: d37xabah88u7hv.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
   Aws:
     Type: AWS::Route53::RecordSetGroup
     Properties:
@@ -55,7 +61,14 @@ Resources:
       Comment: WWW
       HostedZoneId: !Ref HostedZone
       RecordSets:
+        #
         - Type: A
+          Name: !Ref Domain
+          AliasTarget:
+            DNSName: d1razabfe671zf.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
           Name: !Ref Domain
           AliasTarget:
             DNSName: d1razabfe671zf.cloudfront.net
@@ -67,7 +80,19 @@ Resources:
             DNSName: d1razabfe671zf.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub www.${Domain}
+          AliasTarget:
+            DNSName: d1razabfe671zf.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
         - Type: A
+          Name: !Sub departures.${Domain}
+          AliasTarget:
+            DNSName: dy5vx28117t1e.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
           Name: !Sub departures.${Domain}
           AliasTarget:
             DNSName: dy5vx28117t1e.cloudfront.net
